@@ -11,6 +11,8 @@ void TPortalExitNode::Save(NCellMaster::TSaveContext& context) const
     using NYT::Save;
     Save(context, EntranceCellTag_);
     Save(context, Path_);
+    Save(context, Key_);
+    Save(context, ParentId_);
 }
 
 void TPortalExitNode::Load(NCellMaster::TLoadContext& context)
@@ -20,6 +22,11 @@ void TPortalExitNode::Load(NCellMaster::TLoadContext& context)
     using NYT::Load;
     Load(context, EntranceCellTag_);
     Load(context, Path_);
+    // COMPAT(babenko)
+    if (context.GetVersion() >= NCellMaster::EMasterSnapshotVersion::MorePortalAttributes) {
+        Load(context, Key_);
+        Load(context, ParentId_);
+    }
 }
 
 ////////////////////////////////////////////////////////////////////////////////
