@@ -12,6 +12,8 @@ class TPortalExitNode
 public:
     DEFINE_BYVAL_RW_PROPERTY(NObjectClient::TCellTag, EntranceCellTag);
     DEFINE_BYVAL_RW_PROPERTY(NYPath::TYPath, Path);
+    DEFINE_BYVAL_RW_PROPERTY(std::optional<NYPath::TYPath>, Key);
+    DEFINE_BYVAL_RW_PROPERTY(TNodeId, ParentId);
 
 public:
     using TMapNode::TMapNode;
