@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* babenko: More portal exit attributes. Update masters via snapshot.
 * babenko: Transaction depth limit introduced. Update masters via snapshot.
 * ifsmirnov: Multilevel chunklists for dynamic tables. Update masters via snapshot.
 * babenko: Introduce Cypress shard objects. Update masters via snapshot.
